# modelfungible

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENTERPRISE_DESIGN.md  LICENSE  README.md  __init__.py  __main__.py  cli.py  pyproject.toml
adapters/: __init__.py  anthropic.py  base.py  custom.py  glm.py  groq.py  minimax.py  moonshot.py  openai.py  owen.py
core/: __init__.py  circuit_breaker.py  context_builder.py  cost_router.py  execute.py  executor.py  rules_engine.py  sdk.py  sdk_dropin.py  session_manager.py  streaming.py
core/tests/: test_circuit_breaker.py  test_cost_router.py
docs/: UNIVERSAL_PROXY_SPEC.md  admin-quick-start.md  enterprise-user-guide.md  quick-reference.md
enterprise/: __init__.py  admin_app.py  admin_cli.py  admin_ui.html  api_decisions.py  api_keys.py  audit.py  budget_alerts.py  byok.py  compliance_engine.py  decision_attribution.py  distillation_detector.py  execute_integration.py  guardrails.py  license.py  prompt_marketplace.py  semantic_cache.py  traffic_obfuscator.py
enterprise/adapters/: __init__.py  ollama.py  vertexai.py
enterprise/tests/: __init__.py  test_admin_app.py  test_api_keys.py  test_audit.py  test_budget_alerts.py  test_byok.py  test_distillation_detector.py  test_enterprise_adapters.py  test_execute.py  test_guardrails.py  test_license.py  test_traffic_obfuscator.py
examples/: README.md  sdk_usage.py
examples/chat_poc/: .env.example  README.md  app.py  setup.sh
examples/chat_poc/templates/: index.html
examples/facts/: healthcare_context.json  legal_context.json
examples/strategies/: clinical_notes.json  contract_risk.json  resume_screening.json
examples/tests/: test_domain_agnostic.py
tests/: test_context_builder.py  test_integration.py  test_model_executor.py  test_providers.py  test_rules_engine.py  test_sdk_dropin.py  test_session_manager.py
