[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelfungible"
version = "0.1.0"
description = "Universal AI model execution layer — plug in any model, same behavior"
readme = "README.md"
license = {text = "BUSL-1.0"}
authors = [
    {name = "Saabu", email = "saabu@openclaw.ai"}
]
keywords = ["ai", "llm", "model", "execution", "layer", "adapter", "trading", "model-agnostic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
anthropic = ["anthropic>=0.18.0"]
groq = ["groq>=0.4.0"]
openai = ["openai>=1.0.0"]
all = [
    "anthropic>=0.18.0",
    "groq>=0.4.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/myv2ss/modelfungible"
Documentation = "https://github.com/myv2ss/modelfungible#readme"
Repository = "https://github.com/myv2ss/modelfungible"
Issues = "https://github.com/myv2ss/modelfungible/issues"

[project.scripts]
modelfungible = "modelfungible.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelfungible*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["modelfungible"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
